force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UnlockedPackage__c.field-meta.xml
<CustomField>
    <fullName>UnlockedPackage__c</fullName>
    <description>The unlocked package the package version represents a version of</description>
    <label>Unlocked Package</label>
    <referenceTo>UPM_UnlockedPackage__c</referenceTo>
    <relationshipLabel>Installed Packages</relationshipLabel>
    <relationshipName>InstalledPackages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>