force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_Description__c.field-meta.xml
<CustomField>
    <fullName>UPM_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>