force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_Environment__c.field-meta.xml
<CustomField>
    <fullName>UPM_Environment__c</fullName>
    <label>Environment</label>
    <referenceTo>UPM_Environment__c</referenceTo>
    <relationshipLabel>Installed Packages</relationshipLabel>
    <relationshipName>UPM_InstalledPackages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>