force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_IsBeta__c.field-meta.xml
<CustomField>
    <fullName>UPM_IsBeta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Beta</label>
    <type>Checkbox</type>
</CustomField>