force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_IsHasKey__c.field-meta.xml
<CustomField>
    <fullName>UPM_IsHasKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Key</label>
    <type>Checkbox</type>
</CustomField>