force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_SubscriberPackageVersionId__c.field-meta.xml
<CustomField>
    <fullName>UPM_SubscriberPackageVersionId__c</fullName>
    <label>Subscriber Package Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>