force-app/package-pipeline-viewer/objects/UPM_InstalledPackage__c/fields/UPM_Version__c.field-meta.xml
<CustomField>
    <fullName>UPM_Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>